[tool.poetry]
name = "arxiv-source"
version = "0.1.3"
description = ""
authors = ["toma tanaka <ulti4929@gmail.com>"]
readme = "README.md"
packages = [
    {include = "arxiv_source", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
ipykernel = "^6.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
